Fix share buttons overlapping

--- a/src/components/PageContent/styles.module.css
+++ b/src/components/PageContent/styles.module.css
@@ -1,7 +1,3 @@
 .pageContent {
   padding-bottom: 50px;
-
-  @media (--xs-scr) {
-    padding-bottom: 0;
-  }
 }
